Build in webpack
Created a pipeline based on the one used in Padaone for building the app. Because express-openapi-validator is loading modules dynamically, routes are created manually using the OpenAPI doc
